# numerical-analysis-app

./: CMakeLists.txt  README.md  bisection.cpp  curve.cpp  fixed_point.cpp  integration.h  interpolation.h  lagrange.cpp  main.cpp  newton_divided_difference.cpp  newton_raphson.cpp  numerical_analysis.h  root_finding.h  secant.cpp  simpsons.cpp  trapezoidal.cpp
